# Gather

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/desktop/: package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  Contradictions.tsx  api.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
daemon/: Cargo.toml  build.rs
daemon/examples/: grpc_smoke.rs
daemon/migrations/: 0001_init.sql  0002_extraction_cursor.sql  0003_scan_cursor.sql
daemon/src/: auth.rs  auth_token.rs  config.rs  db.rs  error.rs  lib.rs  main.rs
daemon/src/adapters/: chatgpt.rs  claude.rs  copilot.rs  gemini.rs  generic.rs  grok.rs  mod.rs  perplexity.rs
daemon/src/extract/: image.rs  mod.rs  ollama.rs  pdf.rs  persist.rs  rules.rs  segment.rs
daemon/src/grpc/: auth.rs  contradictions.rs  convert.rs  export.rs  ingest.rs  mod.rs  query.rs
daemon/src/routes/: contradictions.rs  export.rs  health.rs  ingest.rs  mod.rs  query.rs
daemon/src/scan/: mod.rs  score.rs
daemon/tests/: api_integration.rs  extraction_integration.rs  grpc_integration.rs  scan_integration.rs
docker/: daemon.Dockerfile  postgres.Dockerfile
docker/initdb/: 01-extensions.sql
docs/: BACKUP-RUNBOOK.md  TECHNICAL-WRITEUP.md
infra/terraform/: cloud-init.yaml  main.tf  outputs.tf  variables.tf  versions.tf
observability/: prometheus.yml
observability/grafana/provisioning/dashboards/: dashboards.yml  gather-dashboard.json
observability/grafana/provisioning/datasources/: prometheus.yml
proto/gather/v1/: gather.proto
scripts/: README.md  ci-restore-drill.sh  gather-backup.ps1  gather-backup.sh  install-schedule-linux.sh  install-schedule-macos.sh  install-schedule-windows.ps1  vps-restore-drill.sh
