[package]
name = "gather-daemon"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Local-first AI data sovereignty daemon: ingestion, knowledge graph, contradiction review"
license = "MIT"

[workspace]

[dependencies]
axum = { version = "0.8", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
tower-http = { version = "0.6", features = ["trace", "limit", "cors"] }
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
pgvector = { version = "0.4", features = ["sqlx"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false }
anyhow = "1"
thiserror = "2"
mime_guess = "2"

[profile.release]
lto = "thin"
strip = "symbols"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
