[package]
name = "gather-daemon"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Local-first AI data sovereignty daemon: ingestion, knowledge graph, contradiction review"
license = "MIT"

[workspace]

[dependencies]
axum = { version = "0.8", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time", "process", "fs"] }
tower-http = { version = "0.6", features = ["trace", "limit", "cors"] }
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
pgvector = { version = "0.4", features = ["sqlx"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false }
anyhow = "1"
thiserror = "2"
mime_guess = "2"
keyring = { version = "3", features = ["sync-secret-service", "vendored", "apple-native", "windows-native"] }
getrandom = "0.3"
regex = "1"
pdf-extract = "0.12"
lopdf = "0.44"
imagesize = "0.15"
kamadak-exif = "0.6"
tempfile = "3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-build = "0.12"
protox = "0.7"

[profile.release]
lto = "thin"
strip = "symbols"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tonic = { version = "0.12", features = ["transport"] }
