[package]
name = "gather-desktop"
version = "0.1.0"
edition = "2021"
description = "Gather desktop UI (Tauri v2)"
license = "MIT"

[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "gather_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
